refactor: back canonical templates with resource files
Templates lived as escaped Clojure string literals, which already forced the
Makefile's recipe tabs to be hand-written as \t escapes. The incoming docs and
CI aspects add tab-sensitive, regex-heavy and Clojure-in-Clojure templates that
are unreviewable and easy to corrupt in that form.

Every template's bytes are unchanged, so release 1-5 fingerprints still re-derive
from source; expected-template-hashes pins that per key. Clojure-suffixed
templates carry a .template extension because skein load-files every .clj under
a spool root's :paths as a namespace source.